# backend/internal/router/router.go
@@ -13,7 +13,13 @@ import (
 func SetupRouter() *gin.Engine {
 	router := gin.Default()
 
-	router.Use(cors.Default()) // All origins allowed by default
+	router.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"http://localhost:5173"},
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+	}))
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -27,6 +33,7 @@ func SetupRouter() *gin.Engine {
 	protected.Use(middleware.AuthMiddleware())
 	{
 		protected.POST("/clothing/upload", handlers.UploadClothingHandler)
+		protected.GET("/user/userinfo", handlers.GetCurrentUserHandler)
 	}
 
 	router.GET("/ping", pingHandler)
